<resources>
    <string name="app_name">TARPost</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_post">My Posts</string>
    <string name="nav_item_event">Event</string>
    <string name="nav_item_event_my">My Events</string>
    <string name="nav_item_eventJoin">Event Joined</string>
    <string name="nav_item_bookmark">Bookmarks</string>
    <string name="nav_item_subscription">Subscriptions</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_feedback">Feedback</string>
    <string-array name="navigation_drawer_item">
        <item>Home</item>
        <item>My Posts</item>
        <item>Bookmarks</item>
        <item>Subscriptions</item>
        <item>Settings</item>
        <item>Home</item>
        <item>My Posts</item>
        <item>Bookmarks</item>
        <item>Subscriptions</item>
        <item>Settings</item>
        <item>Ali baba</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_information">Add Post</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_post_more_details">Post More Details</string>
    <string name="title_activity_event_more_details">Event More Details</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_user_profile_action">User Profile Action</string>
    <string name="title_activity_post_more_details_collapsing">PostMoreDetailsCollapsingActivity
    </string>
    <string name="title_activity_post_more_details_action">PostMoreDetailsActionActivity</string>
    <string name="title_activity_post_settings">Settings</string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="title_activity_intro">Intro</string>
    <string name="text_search">Search</string>
    <string name="text_title_clear_offline">Clear offline data</string>
    <string name="text_content_clear_offline">This will clear all the offline data</string>
    <string name="text_title_theme">Theme Color</string>
    <string name="text_content_theme">Select the color to theme the application</string>
    <string name="text_info_theme">Restart the application to take effect</string>
    <string name="text_title_notification_on_off">Notification Reminder</string>
    <string name="text_content_notification_on_off">Receive notification reminder the event
    you joined</string>
    <string-array name="theme_color_items">
        <item>Red</item>
        <item>Purple</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>Teal</item>
        <item>Orange</item>
        <item>Brown</item>
        <item>Grey</item>
    </string-array>
    <string-array name="theme_color_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="text_dialog_confirm_title">Confirm</string>
    <string name="text_dialog_confirm_content">Are you confirm to perform?</string>
    <string name="text_dialog_confirm_yes">Yes</string>
    <string name="text_dialog_confirm_no">No</string>
    <string name="text_dialog_confirm_cancel">Cancel</string>
    <string name="text_dialog_adding">Adding...</string>
    <string name="text_dialog_updating">Updating...</string>
    <string name="text_dialog_removing">Removing...</string>
    <string name="text_dialog_create_post_title">Create Post</string>
    <string name="text_dialog_create_event_title">Create Event</string>
    <string name="text_dialog_create_user_title">Create User</string>
    <string name="text_dialog_create_content">Are you confirm to create this?</string>
    <string name="text_dialog_modify_post_title">Modify Post</string>
    <string name="text_dialog_modify_event_title">Modify Event</string>
    <string name="text_dialog_modify_user_title">Modify User</string>
    <string name="text_dialog_modify_content">Are you confirm to modify this?</string>
    <string name="text_dialog_delete_post_title">Delete Post</string>
    <string name="text_dialog_delete_event_title">Delete Event</string>
    <string name="text_dialog_delete_user_title">Delete User</string>
    <string name="text_dialog_delete_content">Are you confirm to delete this?</string>
    <string name="text_dialog_join_event_title">Join Event</string>
    <string name="text_dialog_join_event_content">Are you confirm to join this?</string>
    <string name="text_dialog_skip_event_title">Skip Event</string>
    <string name="text_dialog_skip_event_content">Are you confirm to skip this?</string>
    <string name="text_dialog_subscribe_title">Subscript</string>
    <string name="text_dialog_subscribe_content">Are you confirm to subscript this?</string>
    <string name="text_dialog_unsubscribe_title">Un-subscript</string>
    <string name="text_dialog_unsubscribe_content">Are you confirm to un-subscript this?</string>
    <string name="text_dialog_bookmark_title">Bookmark</string>
    <string name="text_dialog_bookmark_content">Are you confirm to delete this bookmark?</string>
    <string name="text_message_insert_user_success">Create User Successfully. Please check
        your email for activation</string>
    <string name="text_message_insert_user_duplicate">Duplicate email found</string>
    <string name="text_message_insert_user_failed">Failed to create user</string>
    <string name="text_message_insert_success">Inserted Successfully</string>
    <string name="text_message_insert_failed">Failed to insert</string>
    <string name="text_message_update_success">Update Successfully</string>
    <string name="text_message_update_failed">Failed to Update</string>
    <string name="text_message_delete_success">Delete Successfully</string>
    <string name="text_message_delete_failed">Failed to Delete</string>
    <string name="text_message_unsubscribe">Unsubscribe Successfully</string>
    <string name="text_message_subscribe">Subscribe Successfully</string>
    <string name="text_message_join_event">Join Event Successfully</string>
    <string name="text_message_already_joined_event">You already joined the event</string>
    <string name="text_message_join_event_failed">Failed to join event</string>
    <string name="text_message_unjoin_event">Un-join Event Successfully</string>
    <string name="text_message_unjoin_event_failed">Failed to un-join event</string>
    <string name="text_message_no_items_available">No More Items Available</string>
    <string name="text_message_fetch_offline_data">Fetched Offline Data</string>
    <string name="text_message_clear_offline_data">Clear Offline Data Successfully</string>
    <string name="text_message_update_password">New Password Reset Successfully</string>
    <string name="text_message_update_password_failed">Failed to Reset New Password</string>
    <string name="text_success_login">Login Successfully</string>
    <string name="text_error_required">This field required</string>
    <string name="text_error_login">You have entered an invalid username or password</string>
    <string name="text_error_event_date">Start date time cannot greater than end date time</string>
    <string name="text_intro_title1">Welcome to TARPost</string>
    <string name="text_intro_content1">TARPost is an application allow you to distribute
        information</string>
    <string name="text_intro_title2">Post</string>
    <string name="text_intro_content2">You can post information or event instantly</string>
    <string name="text_intro_title3">Search</string>
    <string name="text_intro_content3">You can search people, event, post instantly</string>
    <string name="text_intro_title4">Bookmarks</string>
    <string name="text_intro_content4">You can bookmarks any post for future use even you
        are offline</string>
    <string name="text_skip">Skip</string>
    <string name="text_create_post">Create Post</string>
    <string name="text_modify_post">Modify Post</string>
    <string name="text_select_image">Select Image</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_send_new_password">Send New Password</string>
    <string name="text_forget_password">Forget Password?</string>
    <string name="text_forget_password_content">To reset your password, enter your email and we
        will send you a new password</string>
    <string name="text_signUp">No account yet? Click here to Sign Up</string>
    <string name="text_name">Name</string>
    <string name="text_name_required">* Name</string>
    <string name="text_email_required">* Email</string>
    <string name="text_password_required">* Password</string>
    <string name="text_phoneNo">Phone No</string>
    <string name="text_avatarPic">Avatar Picture</string>
    <string name="text_coverPic">Cover Picture</string>
    <string name="text_faculty">Faculty</string>
    <string name="text_course">Course</string>
    <string name="text_description">Description</string>
    <string name="text_bookmark">Bookmark</string>
    <string name="text_share">Share</string>
    <string name="text_title">Title</string>
    <string name="text_content">Content</string>
    <string name="text_image">Image</string>
    <string name="text_duration">Duration</string>
    <string name="text_startTime">Start Time</string>
    <string name="text_endTime">End Time</string>
    <string name="text_location">Location</string>
    <string name="text_event_details">Event Details</string>
    <string name="text_members">Members</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
</resources>