<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <!-- <EditTextPreference android:title="Your Name"
                        android:key="username"
                        android:summary="Please provide your username"></EditTextPreference>
    <CheckBoxPreference android:title="Application Updates"
                        android:defaultValue="false"
                        android:summary="This option if selected will allow the application to check for latest versions."
                        android:key="applicationUpdates" />-->
    <ListPreference
        android:title="@string/text_title_theme"
        android:summary="@string/text_content_theme"
        android:key="themeColor"
        android:defaultValue="1"
        android:entries="@array/theme_color_items"
        android:entryValues="@array/theme_color_values" />

    <Preference
        android:title="@string/text_title_clear_offline"
        android:key="clearOfflineData"
        android:summary="@string/text_content_clear_offline"/>

</PreferenceScreen>
