<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- include app bar -->
    <include
        android:id="@+id/app_bar_with_imageview_profile"
        layout="@layout/app_bar_with_imageview_profile"/>

    <!-- content -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profileUserNameAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:hint="@string/text_name"
                    app:met_floatingLabel="normal"
                    app:met_iconLeft="@drawable/ic_username"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profileUserEmailAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:hint="@string/text_email"
                    app:met_floatingLabel="normal"
                    app:met_iconLeft="@drawable/ic_email"
                    android:focusable="false"
                    android:editable="false"
                    app:met_hideUnderline="true"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profileUserPasswordAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:hint="@string/text_password"
                    app:met_floatingLabel="normal"
                    app:met_iconLeft="@drawable/ic_password"
                    android:inputType="textPassword"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profileUserPhoneAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:hint="@string/text_phoneNo"
                    android:digits="0123456789+"
                    app:met_floatingLabel="normal"
                    app:met_iconLeft="@drawable/ic_phone"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profileUserFacultyAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:hint="@string/text_faculty"
                    app:met_floatingLabel="normal"
                    app:met_iconLeft="@drawable/ic_faculty"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profileUserCourseAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:hint="@string/text_course"
                    app:met_floatingLabel="normal"
                    app:met_iconLeft="@drawable/ic_course"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/profileUserDescriptionAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:hint="@string/text_description"
                    app:met_floatingLabel="normal"
                    app:met_iconLeft="@drawable/ic_description"/>

            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/profileUserEditSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_anchor="@id/app_bar_with_imageview_profile"
        app:layout_anchorGravity="bottom|end"
        android:src="@mipmap/ic_done"
        android:onClick="updateUser"/>

</android.support.design.widget.CoordinatorLayout>
