<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.tarpost.bryanty.proj_t_post.activity.LoginActivity"
                android:background="@color/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_below="@id/app_bar"
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:background="@color/primaryColor">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="100dp"
            android:layout_height="144dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:text="@string/text_forget_password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/text_forget_password_content"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/forgetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_username"
            android:layout_marginRight="10dp"
            android:inputType="textEmailAddress"
            app:met_baseColor="@android:color/primary_text_dark"
            app:met_primaryColor="@android:color/primary_text_dark"
            android:hint="@string/text_email" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_send_new_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@color/primaryDarkColor"
            android:textColor="@android:color/white"
            android:text="@string/text_send_new_password"
            android:onClick="sendPassword"/>

    </LinearLayout>

</RelativeLayout>