<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.tarpost.bryanty.proj_t_post.activity.RegisterActivity">

    <!-- include app bar -->
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/app_bar"
        android:id="@+id/linearLayout">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linerLayout_userCover"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@color/primaryColor"
                android:onClick="uploadImage">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/circleImageView_userAvatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar"
                    app:border_width="1dp"
                    app:border_color="#FFFFFFFF"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:onClick="uploadImage"/>

                </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_username"
            android:layout_marginRight="10dp"
            android:hint="@string/text_name_required" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_email"
            android:layout_marginRight="10dp"
            android:hint="@string/text_email_required" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_password"
            android:layout_marginRight="10dp"
            android:hint="@string/text_password_required"
            android:inputType="textPassword"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789+"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_phone"
            android:layout_marginRight="10dp"
            android:hint="@string/text_phoneNo" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/userFaculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_faculty"
            android:layout_marginRight="10dp"
            app:met_hideUnderline="true"
            android:hint="@string/text_faculty"
            android:editable="false"/>

        <Spinner android:id="@+id/userFacultySpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/userCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_course"
            app:met_hideUnderline="true"
            android:layout_marginRight="10dp"
            android:hint="@string/text_course"
            android:editable="false"/>

        <Spinner android:id="@+id/userCourseSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/userDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            app:met_iconLeft="@drawable/ic_description"
            android:layout_marginRight="10dp"
            android:hint="@string/text_description" />

       <!-- <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/userAvatar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:met_floatingLabel="normal"
             app:met_iconLeft="@drawable/ic_avatar"
             app:met_hideUnderline="true"
             android:layout_marginRight="10dp"
             android:hint="@string/text_avatarPic" />

        <LinearLayout
            android:layout_marginLeft="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/informationImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:scaleType="fitXY"/>

            <Button
                android:id="@+id/informationImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_select_image"
                android:onClick="uploadImage"
                android:layout_marginTop="25dp"/>

        </LinearLayout>-->

        <!-- floating action button -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/floating_action_button_margin"
            android:src="@mipmap/ic_done"
            android:onClick="addUser"
            />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
